add message with username

--- a/views/chat.jade
+++ b/views/chat.jade
@@ -45,7 +45,7 @@ block content
         li
           ul.list-inline
             li
-              h5 <%= message.user %>
+              h5 <%= message.user %>:
             li
               p <%= message.message %>
             li
