--- a/views/chat.jade
+++ b/views/chat.jade
@@ -18,7 +18,7 @@ block content
               |  Start Chat
 
     #chatroom.row.hide
-      #chat.col-md-9(data-host='#{serverHost}')
+      #chat.col-md-9(data-host='chatandbye.com')
         #users.col-md-2.bg-warning
         #message.col-md-7
       #action.col-md-3
